Added family filter to sample plate report

--- a/notebooks/reports/sample_plates_report.html
+++ b/notebooks/reports/sample_plates_report.html
@@ -61,6 +61,11 @@
         <button title="Clear search">X</button>
       </div>
       <div class="search-control">
+        <label>Filter by family:</label>
+        <input data-field="family" type="text" />
+        <button title="Clear search">X</button>
+      </div>
+      <div class="search-control">
         <label>Filter by sample ID:</label>
         <input data-field="sample_id" type="text" />
         <button title="Clear search">X</button>
