Update and fix sample plates report

--- a/notebooks/reports/sample_plates_report.html
+++ b/notebooks/reports/sample_plates_report.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <h1>Nitfix Sample Plates <span>{{ now.strftime('%Y-%m-%d %I:%M %p') }}</span></h1>
+  <h1>NitFix Sample Plates <span>{{ now.strftime('%Y-%m-%d %I:%M %p') }}</span></h1>
 
   <h2>
     <button data-selector="families" class="toggle closed" title="Open or close this section"></button>
