Add Werner data to taxonomy

--- a/src/reports/sample_selection.html
+++ b/src/reports/sample_selection.html
@@ -72,7 +72,7 @@
               {% endif %}
             </td>
             <td class="l widest">{{row.scientific_name}}</td>
-            <td class="r"><span>{{'' if row.category == '5_unprocessed' else row.rapid_total_dna}}</span></td>
+            <td class="r"><span>{{'' if row.category == '5_unprocessed' else row.total_dna}}</span></td>
             <td>{{row.source_plate}}</td>
             <td>{{row.source_well}}</td>
             <td colspan="4">{{row.sample_id}}</td>
