Breaking into smaller more discrete modules

--- a/src/reports/sample_selection.html
+++ b/src/reports/sample_selection.html
@@ -88,7 +88,7 @@
                 <span title="Rejected sample">&otimes;</span>
               {% endif %}
             </td>
-            <td class="l" colspan="3">{{row.scientific_name}}</td>
+            <td class="l" colspan="3">{{row.sci_name}}</td>
             <td class="r"><span>{{'' if row.category == '5_unprocessed' else row.total_dna}}</span></td>
             <td>{{row.source_plate}}</td>
             <td>{{row.source_well}}</td>
